--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -899,7 +899,7 @@ $tasklist_height : 36px;
       left: 50px;
       min-width: 290px;
 
-      .task-name.has-trigger {
+      .task-name {
         cursor: pointer;
         position: relative;
       }
