--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1791,7 +1791,7 @@ span.checkbox {
       top: 0;
       left: 50px;
       min-width: 290px; }
-      .tasklist .task-style .col-title .task-name.has-trigger {
+      .tasklist .task-style .col-title .task-name {
         cursor: pointer;
         position: relative; }
       .tasklist .task-style .col-title a.fa-pencil {
@@ -3427,6 +3427,7 @@ span.checkbox {
   position: fixed;
   z-index: 100;
   height: 92%;
+  top: 5%;
   padding-top: 0.5%;
   width: 100%;
   display: none; }
@@ -3497,7 +3498,6 @@ span.checkbox {
     .binded-trigger-box .tabbed-nav li {
       -webkit-border-radius: 4px;
               border-radius: 4px;
-      overflow: hidden;
       width: 50px;
       height: 50px;
       text-align: center;
@@ -3506,6 +3506,20 @@ span.checkbox {
       position: relative; }
       .binded-trigger-box .tabbed-nav li.item {
         background: #555; }
+        .binded-trigger-box .tabbed-nav li.item .num-flag {
+          background: #a2a1a1;
+          -webkit-border-radius: 3px;
+                  border-radius: 3px;
+          position: absolute;
+          top: -3px;
+          left: -3px;
+          padding: 0px 4px;
+          font-size: 12px;
+          color: #383838;
+          line-height: 1.5em; }
+          .binded-trigger-box .tabbed-nav li.item .num-flag.red {
+            background: #d06a6a;
+            color: #fff; }
         .binded-trigger-box .tabbed-nav li.item:hover {
           background: #505050; }
       .binded-trigger-box .tabbed-nav li.item.selected {
@@ -3599,7 +3613,8 @@ span.checkbox {
       float: left;
       width: 100%;
       position: relative;
-      cursor: pointer; }
+      cursor: pointer;
+      color: rgba(255, 255, 255, 0.8); }
       .binded-trigger-box .tabbed-content .entries .entry:nth-child(odd) {
         background: rgba(255, 255, 255, 0.04); }
       .binded-trigger-box .tabbed-content .entries .entry .fa-chevron-right {
@@ -3667,6 +3682,11 @@ span.checkbox {
             color: #b8464d; }
     .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content {
       position: relative; }
+      .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content p {
+        line-height: 1.4em;
+        font-size: 14px;
+        margin-bottom: .8em;
+        color: rgba(255, 255, 255, 0.8); }
       .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .dynamic-content-overlay {
         position: absolute;
         width: 100%;
@@ -3675,6 +3695,14 @@ span.checkbox {
         top: 0;
         left: 0;
         z-index: 10; }
+        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .dynamic-content-overlay .super-icon {
+          position: absolute;
+          top: -18px;
+          left: 0;
+          font-size: 300px;
+          width: 50%;
+          text-align: center;
+          color: rgba(37, 37, 37, 0.2); }
         .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .dynamic-content-overlay .br {
           display: block;
           margin-bottom: .8em; }
@@ -3711,7 +3739,7 @@ span.checkbox {
           display: block; }
         .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .dynamic-content-overlay.checked {
           display: none; }
-      .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .lambda-start-btn {
+      .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .trigger-start-btn {
         background: #92f38b;
         color: #444;
         line-height: 1.5em;
@@ -3720,22 +3748,22 @@ span.checkbox {
         -webkit-border-radius: 3px;
                 border-radius: 3px;
         margin-bottom: .5em; }
-        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .lambda-start-btn.complete {
+        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .trigger-start-btn.complete {
           background: #afaeae;
           pointer-events: none; }
-      .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .lambda-steps {
+      .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .trigger-steps {
         line-height: 1.8em;
         color: #afaeae;
         font-size: 14px;
         position: relative;
         left: 1px; }
-        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .lambda-steps .done {
+        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .trigger-steps .done {
           color: #92f38b;
           font-style: italic; }
-        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .lambda-steps .fa {
+        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .trigger-steps .fa {
           margin-right: 5px;
           color: #fff; }
-        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .lambda-steps .fa {
+        .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .trigger-steps .fa {
           margin-right: 5px;
           color: #fff; }
     .binded-trigger-box .tabbed-content.tasks .task-trigger .completion-test-btn {
