--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -16,6 +16,7 @@ $overLayBG : rgba(0, 0, 0, .5);
   position: fixed;
   z-index: 100;
   height: 92%;
+  top: 5%;
   padding-top: 0.5%;
   width: 100%;
   display: none;
@@ -113,7 +114,7 @@ $overLayBG : rgba(0, 0, 0, .5);
 
     li {
       border-radius: 4px;
-      overflow: hidden;
+      //overflow: hidden;
       width: 50px;
       height: 50px;
       text-align: center;
@@ -123,6 +124,24 @@ $overLayBG : rgba(0, 0, 0, .5);
 
       &.item {
         background: $normalBtnGray;
+
+        .num-flag {
+          background: darken($txtLightGray, 5%);
+          border-radius: 3px;
+          position: absolute;
+          top: -3px;
+          left: -3px;
+          padding: 0px 4px;
+          font-size: 12px;
+          color: $innerButtonGray;
+          line-height: 1.5em;
+
+          &.red {
+            background: rgba(208, 106, 106, 1);
+            color: #fff;
+
+          }
+        }
 
         &:hover {
           background: darken($normalBtnGray, 2%);
@@ -259,6 +278,7 @@ $overLayBG : rgba(0, 0, 0, .5);
         width: 100%;
         position: relative;
         cursor: pointer;
+        color: rgba(255, 255, 255, .8);
 
         &:nth-child(odd){
          background: rgba(255,255,255, .04);
@@ -375,6 +395,13 @@ $overLayBG : rgba(0, 0, 0, .5);
         .dynamic-content {
           position: relative;
 
+          p {
+            line-height: 1.4em;
+            font-size: 14px;
+            margin-bottom: .8em;
+            color: rgba(255, 255, 255, .8);
+          }
+
           .dynamic-content-overlay {
             position: absolute;
             width: 100%;
@@ -383,6 +410,16 @@ $overLayBG : rgba(0, 0, 0, .5);
             top: 0;
             left: 0;
             z-index: 10;
+
+            .super-icon {
+              position: absolute;
+              top: -18px;
+              left: 0;
+              font-size: 300px;
+              width: 50%;
+              text-align: center;
+              color: rgba(37, 37, 37, .2);
+            }
 
             .br {
               display: block;
@@ -448,7 +485,7 @@ $overLayBG : rgba(0, 0, 0, .5);
 
           }
 
-          .lambda-start-btn {
+          .trigger-start-btn {
             background: $lightGreen;
             color: #444;
             line-height: 1.5em;
@@ -462,7 +499,7 @@ $overLayBG : rgba(0, 0, 0, .5);
             }
           }
 
-          .lambda-steps {
+          .trigger-steps {
             line-height: 1.8em;
             color: $txtLightGray;
             font-size: 14px;
