--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -368,8 +368,30 @@ $overLayBG : rgba(0, 0, 0, .5);
           bottom: $padding;
           left: $padding;
 
+          .fa-heart,
+          .fa-heartbeat {
+            color: rgba(255, 53, 65, .4);
+
+            &.success {
+              color: rgba(255, 53, 65, 1);
+            }
+          }
+
+          .completion-test-btn {
+            color: #ffd04c;
+          }
+
+          .info-data {
+            color: rgba(204,204,204,.37);
+          }
+
           .ajax-response {
             color: #fff;
+            display: none;
+            
+            &.show {
+              display: inline;
+            }
 
             .fa {
               color: #dde69a;
@@ -415,7 +437,7 @@ $overLayBG : rgba(0, 0, 0, .5);
               position: absolute;
               top: -18px;
               left: 0;
-              font-size: 300px;
+              font-size: 220px;
               width: 50%;
               text-align: center;
               color: rgba(37, 37, 37, .2);
@@ -524,7 +546,7 @@ $overLayBG : rgba(0, 0, 0, .5);
 
         }
 
-        .completion-test-btn {
+        .completion-test-btnXX {
           color: #ffd04c;
 
           .fa-heartbeat {
@@ -534,7 +556,7 @@ $overLayBG : rgba(0, 0, 0, .5);
 
       }
 
-      &[data-status=completed] {
+      &[data-status=completedXX] {
         .completion-test-btn {
           pointer-events: none;
           cursor: default;
