--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3705,7 +3705,7 @@ span.checkbox {
         width: 100%;
         height: 100%;
         background: rgba(72, 72, 72, 0.9);
-        top: 0;
+        top: -1px;
         left: 0;
         z-index: 10; }
         .binded-trigger-box .tabbed-content.tasks .task-trigger .dynamic-content .dynamic-content-overlay .super-icon {
