--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -429,7 +429,7 @@ $overLayBG : rgba(0, 0, 0, .5);
             width: 100%;
             height: 100%;
             background: rgba($tabGray, .9);
-            top: 0;
+            top: -1px;
             left: 0;
             z-index: 10;
 
