--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3426,9 +3426,10 @@ span.checkbox {
 .binded-trigger-box-overlay {
   position: fixed;
   z-index: 100;
-  height: 92%;
-  top: 5%;
-  padding-top: 0.5%;
+  height: 96%;
+  top: 0%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   width: 100%;
   display: none; }
   .binded-trigger-box-overlay.show {
@@ -3439,12 +3440,13 @@ span.checkbox {
   background: #666;
   color: #fff;
   width: 80%;
-  height: 518px;
+  min-height: 518px;
   min-width: 776px;
+  height: 100%;
   margin: 0 auto 0;
   -webkit-border-radius: 4px;
           border-radius: 4px;
-  padding: 0;
+  padding: 0 0 50px;
   border-color: #555;
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2); }
@@ -3560,8 +3562,9 @@ span.checkbox {
   .binded-trigger-box .action-btns {
     text-align: right;
     padding: 0;
-    position: relative;
-    right: 10px; }
+    position: absolute;
+    right: 10px;
+    bottom: 10px; }
     .binded-trigger-box .action-btns button {
       text-align: center;
       line-height: 46px;
@@ -3806,7 +3809,7 @@ span.checkbox {
     .binded-trigger-box .tabbed-content.tasks .task-data-block pre {
       margin-top: 10px;
       overflow: scroll;
-      height: 324px;
+      min-height: 324px;
       font-size: 12px;
       font-weight: 100;
       padding: 10px;
@@ -3875,7 +3878,7 @@ span.checkbox {
       float: right;
       position: relative;
       top: -42px;
-      height: 318px; }
+      min-height: 318px; }
       .binded-trigger-box .tabbed-content.metadata .column-details .inner-details {
         display: none; }
         .binded-trigger-box .tabbed-content.metadata .column-details .inner-details.show {
