--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -17,9 +17,10 @@ $alertRed : rgba(208, 106, 106, 1);
 .binded-trigger-box-overlay {
   position: fixed;
   z-index: 100;
-  height: 92%;
-  top: 5%;
-  padding-top: 0.5%;
+  height: 96%;
+  top: 0%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   width: 100%;
   display: none;
 
@@ -34,11 +35,12 @@ $alertRed : rgba(208, 106, 106, 1);
   background: $mainBGGray;
   color: $txtInnerColor;
   width: 80%;
-  height: 518px;
+  min-height: 518px;
   min-width: 776px;
+  height: 100%;
   margin: 0 auto 0;
   border-radius: 4px;
-  padding: 0;
+  padding: 0 0 50px;
   border-color: $normalBtnGray;
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, .2);
   
@@ -202,8 +204,9 @@ $alertRed : rgba(208, 106, 106, 1);
   .action-btns {
     text-align: right;
     padding: 0;
-    position: relative;
+    position: absolute;
     right: $padding;
+    bottom: $padding;
 
     button {
       text-align: center;
@@ -597,7 +600,7 @@ $alertRed : rgba(208, 106, 106, 1);
         pre {
           margin-top: $padding;
           overflow: scroll;
-          height: 324px;
+          min-height: 324px;
           font-size: 12px;
           font-weight: 100;
           padding: $padding;
@@ -687,7 +690,7 @@ $alertRed : rgba(208, 106, 106, 1);
         float: right;
         position: relative;
         top: -42px;
-        height: 318px;
+        min-height: 318px;
 
         .inner-details {
           display: none;
