--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3606,7 +3606,6 @@ span.checkbox {
     line-height: 1.3em;
     margin-bottom: 1.5em; }
   .binded-trigger-box .tabbed-content .entries {
-    height: 293px;
     overflow: scroll;
     padding-bottom: 3em; }
     .binded-trigger-box .tabbed-content .entries .entry {
@@ -3849,7 +3848,9 @@ span.checkbox {
     .binded-trigger-box .tabbed-content.metadata .column-list {
       width: 72%;
       float: left;
-      position: relative; }
+      position: relative;
+      height: 100%;
+      min-height: 318px; }
       .binded-trigger-box .tabbed-content.metadata .column-list .tab-form input {
         font-size: 14px;
         height: 24px;
